--- a/index.html
+++ b/index.html
@@ -2602,6 +2602,88 @@ let clicado = true;
 
 </script>
   
+<!--Quantos preencheram o form e por qual input começaram-->
+<script>
+let inputName = document.querySelector('input.form-control#name');
+let inputEmail = document.querySelector('input.form-control#email');
+let inputPhone = document.querySelector('input.form-control#phone');
+let inputMessage = document.querySelector('textarea.form-control#message');
+let firstClicado = true;
+let quantidadePrencher = 0;
+
+  if (inputName) {
+    inputName.addEventListener(
+      'click', evt => {
+       if (inputName && firstClicado) {
+
+          quantidadePrencher++;
+          tracker.send('event', 
+            {'action': 'click', 
+            'label': 'nome',
+            'category': 'preencher-form',
+            'value': quantidadePrencher,
+            'cd1': 'preencher seu nome'});
+          firstClicado = false;
+      }
+     
+    });
+  } 
+  if (inputEmail){
+    inputEmail.addEventListener(
+      'click', evt => {
+      if (inputEmail && firstClicado) {
+
+        quantidadePrencher++;
+        tracker.send('event', 
+          {'action': 'click', 
+          'label': 'email',
+          'category': 'preencher-form',
+          'value': quantidadePrencher,
+          'cd1': 'preencher seu email'});
+        firstClicado = false;
+      }
+
+    })
+  }
+
+  if (inputPhone){
+    inputPhone.addEventListener(
+      'click', evt => {
+      if (inputPhone && firstClicado) {
+
+        quantidadePrencher++;
+        tracker.send('event', 
+          {'action': 'click', 
+          'label': 'phone',
+          'category': 'preencher-form',
+          'value': quantidadePrencher,
+          'cd1': 'preencher seu telefone'});
+          firstClicado = false;
+      }
+
+    })
+  }
+  
+  if (inputMessage){
+    inputMessage.addEventListener(
+      'click', evt => {
+      if (inputMessage && firstClicado) {
+
+        quantidadePrencher++;
+        tracker.send('event', 
+          {'action': 'click', 
+          'label': 'messagem',
+          'category': 'preencher-form',
+          'value': quantidadePrencher,
+          'cd1': 'preencher sua mensagem'});
+          firstClicado = false;
+      }
+
+    })
+  }
+
+</script>
+  
 </body>
 
 </html>
