--- a/index.html
+++ b/index.html
@@ -2739,6 +2739,241 @@ let quantidadePrencher = 0;
 
 </script>
   
+<!--verificar midias sociais, se são dos dev ou site, quais midias foram, e quantidades de pessoas que clicaram-->
+<script>  
+  let quantidadeMidiasSociais = 0;
+  let clicadoMidia = true;
+
+    document.querySelector('div.team-member img[src="https://tag-trainer.raccoon.ag/static/shared/ariel.png"] + h4 + p + ul li i.fa.fa-twitter').addEventListener(
+      'click', evt => {
+        if (clicadoMidia) {
+          quantidadeMidiasSociais++;
+          tracker.send(
+            'event',
+          {
+            'action': 'click-midia',
+            'category': 'cliclk-midia-dev',
+            'label': 'click-midia-dev-twitter',
+            'value': quantidadeMidiasSociais,
+            'cd1': 'Sereia Morelli'
+            }
+          );
+          clicadoMidia = false;
+        }
+      }
+    )
+
+    document.querySelector('div.team-member img[src="https://tag-trainer.raccoon.ag/static/shared/ariel.png"] + h4 + p + ul li i.fa.fa-facebook').addEventListener(
+      'click', evt => {
+        if(clicadoMidia) {
+          quantidadeMidiasSociais++;
+          tracker.send(
+            'event',
+            {
+              'action': 'click-midia',
+              'category': 'cliclk-midia-dev',
+              'label': 'click-midia-dev-facebook',
+              'value': quantidadeMidiasSociais,
+              'cd1': 'Sereia Morelli'
+             }
+          );
+          clicadoMidia = false;
+        }
+      }
+    )
+ 
+    document.querySelector('div.team-member img[src="https://tag-trainer.raccoon.ag/static/shared/ariel.png"] + h4 + p + ul li i.fa.fa-linkedin').addEventListener(
+      'click', evt => {
+        if(clicadoMidia) {
+          quantidadeMidiasSociais++;
+          tracker.send(
+            'event',
+            {
+              'action': 'click-midia',
+              'category': 'cliclk-midia-dev',
+              'label': 'click-midia-dev-linkedin',
+              'value': quantidadeMidiasSociais,
+              'cd1': 'Sereia Morelli'
+            }
+          );
+          clicadoMidia = false;
+        }
+      }
+    )
+
+    document.querySelector('div.team-member img[src="https://tag-trainer.raccoon.ag/static/shared/cajo.png"] + h4 + p + ul li i.fa.fa-twitter').addEventListener(
+      'click', evt => {
+        if (clicadoMidia) {
+          quantidadeMidiasSociais++;
+          tracker.send(
+            'event',
+          {
+            'action': 'click-midia',
+            'category': 'cliclk-midia-dev',
+            'label': 'click-midia-dev-twitter',
+            'value': quantidadeMidiasSociais,
+            'cd1': 'Cajo Bundchen'
+            }
+          );
+          clicadoMidia = false;
+        }
+      }
+    )
+
+    document.querySelector('div.team-member img[src="https://tag-trainer.raccoon.ag/static/shared/cajo.png"] + h4 + p + ul li i.fa.fa-facebook').addEventListener(
+      'click', evt => {
+        if(clicadoMidia) {
+          quantidadeMidiasSociais++;
+          tracker.send(
+            'event',
+            {
+              'action': 'click-midia',
+              'category': 'cliclk-midia-dev',
+              'label': 'click-midia-dev-facebook',
+              'value': quantidadeMidiasSociais,
+              'cd1': 'Cajo Bundchen'
+             }
+          );
+          clicadoMidia = false;
+        }
+      }
+    )
+ 
+    document.querySelector('div.team-member img[src="https://tag-trainer.raccoon.ag/static/shared/cajo.png"] + h4 + p + ul li i.fa.fa-linkedin').addEventListener(
+      'click', evt => {
+        if(clicadoMidia) {
+          quantidadeMidiasSociais++;
+          tracker.send(
+            'event',
+            {
+              'action': 'click-midia',
+              'category': 'cliclk-midia-dev',
+              'label': 'click-midia-dev-linkedin',
+              'value': quantidadeMidiasSociais,
+              'cd1': 'Cajo Bundchen'
+            }
+          );
+          clicadoMidia = false;
+        }
+      }
+    )
+
+    document.querySelector('div.team-member img[src="https://tag-trainer.raccoon.ag/static/shared/pumba.png"] + h4 + p + ul li i.fa.fa-twitter').addEventListener(
+      'click', evt => {
+        if (clicadoMidia) {
+          quantidadeMidiasSociais++;
+          tracker.send(
+            'event',
+          {
+            'action': 'click-midia',
+            'category': 'cliclk-midia-dev',
+            'label': 'click-midia-dev-twitter',
+            'value': quantidadeMidiasSociais,
+            'cd1': 'Pumba Joy'
+            }
+          );
+          clicadoMidia = false;
+        }
+      }
+    )
+
+    document.querySelector('div.team-member img[src="https://tag-trainer.raccoon.ag/static/shared/pumba.png"] + h4 + p + ul li i.fa.fa-facebook').addEventListener(
+      'click', evt => {
+        if(clicadoMidia) {
+          quantidadeMidiasSociais++;
+          tracker.send(
+            'event',
+            {
+              'action': 'click-midia',
+              'category': 'cliclk-midia-dev',
+              'label': 'click-midia-dev-facebook',
+              'value': quantidadeMidiasSociais,
+              'cd1': 'Pumba Joy'
+             }
+          );
+          clicadoMidia = false;
+        }
+      }
+    )
+ 
+    document.querySelector('div.team-member img[src="https://tag-trainer.raccoon.ag/static/shared/pumba.png"] + h4 + p + ul li i.fa.fa-linkedin').addEventListener(
+      'click', evt => {
+        if(clicadoMidia) {
+          quantidadeMidiasSociais++;
+          tracker.send(
+            'event',
+            {
+              'action': 'click-midia',
+              'category': 'cliclk-midia-dev',
+              'label': 'click-midia-dev-linkedin',
+              'value': quantidadeMidiasSociais,
+              'cd1': 'Pumba Joy'
+            }
+          );
+          clicadoMidia = false;
+        }
+      }
+    )
+
+    document.querySelector('footer .container .row .col-md-4 + .col-md-4 ul.list-inline.social-buttons li a i.fa.fa-twitter').addEventListener(
+      'click', evt => {
+        if (clicadoMidia) {
+          quantidadeMidiasSociais++;
+          tracker.send(
+            'event',
+          {
+            'action': 'click-midia',
+            'category': 'cliclk-midia-site',
+            'label': 'click-midia-site-twitter',
+            'value': quantidadeMidiasSociais,
+            'cd1': 'Sereia Software Limitd'
+            }
+          );
+          clicadoMidia = false;
+        }
+      }
+    )
+
+    document.querySelector('footer .container .row .col-md-4 + .col-md-4 ul.list-inline.social-buttons li a i.fa.fa-facebook').addEventListener(
+      'click', evt => {
+        if (clicadoMidia) {
+          quantidadeMidiasSociais++;
+          tracker.send(
+            'event',
+          {
+            'action': 'click-midia',
+            'category': 'cliclk-midia-site',
+            'label': 'click-midia-site-facebook',
+            'value': quantidadeMidiasSociais,
+            'cd1': 'Sereia Software Limitd'
+            }
+          );
+          clicadoMidia = false;
+        }
+      }
+    )
+
+    document.querySelector('footer .container .row .col-md-4 + .col-md-4 ul.list-inline.social-buttons li a i.fa.fa-linkedin').addEventListener(
+      'click', evt => {
+        if (clicadoMidia) {
+          quantidadeMidiasSociais++;
+          tracker.send(
+            'event',
+          {
+            'action': 'click-midia',
+            'category': 'cliclk-midia-site',
+            'label': 'click-midia-site-linkedin',
+            'value': quantidadeMidiasSociais,
+            'cd1': 'Sereia Software Limitd'
+            }
+          );
+          clicadoMidia = false;
+        }
+      }
+    )
+     
+  </script>
+  
 </body>
 
 </html>
