--- a/index.html
+++ b/index.html
@@ -2974,7 +2974,7 @@ let quantidadePrencher = 0;
      
 </script>
   
-  <!--verificar quantos vizualizaram form de contato-->
+<!--verificar quantos visualizaram form de contato-->
 <script>
 
   let quantidadeForm = 0;
